# beangrow

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  setup.cfg
beangrow/: compute_returns.py  compute_returns_beam.py  config.py  config_pb2.py  configure.py  download_prices.py  investments.py  reports.py  returns.py  returns_test.py
etc/: env
example/: config.pbtxt  ledger.beancount
