[metadata]
name = beangrow
author = Martin Blais
author_email = blais@furius.ca
url = https://github.com/beancount/beangrow

[options]
packages = find:
python_requires = >=3.6
install_requires =
    beancount
    numpy
    scipy
    pandas
    matplotlib

[options.entry_points]
console_scripts =
    beangrow-returns = beangrow.compute_returns:main
    beangrow-prices = beangrow.download_prices:main
    beangrow-prices-file = beangrow.download_prices_from_file:main
